--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,21 @@
 {
-  "name": "암기 학습 노트",
-  "short_name": "암기 노트",
-  "start_url": "./index.html",
+  "name": "Puzzle and Plan",
+  "short_name": "P N P",
+  "start_url": "./",
   "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "icons": [
-    { "src": "icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
